--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,12 @@
 ---
 sudo: required
 dist: trusty
-# Do not use the travis languague setups (install ruby/python manually) for ansible tests!
-language: shell
-
-env:
-  - SITE=test.yml
+language: python
 
 before_install:
   - sudo apt-get update -qq
 
 install:
-  # Install ruby for and serverspec gem
-  - sudo apt-get install -y ruby
-  - ruby -v
-  - gem install serverspec
-
   # Install Ansible through pip
   - sudo apt-get install -y python-pip python-dev
   - python --version
@@ -27,15 +18,6 @@ install:
   - "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
 
 script:
-  # Check the role/playbook's syntax.
-  - "ansible-playbook -i tests/inventory tests/$SITE --syntax-check"
-
-  # Run the role/playbook with ansible-playbook.
-  - "ansible-playbook -i tests/inventory tests/$SITE --connection=local"
-
-  # Run the role/playbook again, checking to make sure it's idempotent.
-  - >
-    ansible-playbook -i tests/inventory tests/$SITE --connection=local
-    | grep -q 'changed=1.*failed=0'
-    && (echo 'Idempotence test: pass' && exit 0)
-    || (echo 'Idempotence test: fail' && exit 1)
+  # Check the role/playbook's syntax:
+  - ansible-playbook -i tests/inventory tests/provision-test.yml --syntax-check
+  - ansible-playbook -i tests/inventory tests/decomission-test.yml --syntax-check
