--- a/tests/provision-test.yml
+++ b/tests/provision-test.yml
@@ -1,94 +1,25 @@
 ---
 - name: My System | Provision all required infrastructure
   hosts: localhost
-  connection: local
   gather_facts: no
   vars:
-    my_vpc_name: "my_example_vpc"
     my_vpc_region: "eu-west-1"
-    my_vpc_cidr: "172.40.0.0/16"
-    everywhere_cidr: "0.0.0.0/0"
 
-    # Subnets within the VPC
-    my_vpc_subnets:
-      - cidr: "172.40.10.0/24"
-        az: "{{ my_vpc_region }}a"
-
-      - cidr: "172.40.20.0/24"
-        az: "{{ my_vpc_region }}b"
-
-    # Allow the subnets to route to the outside world
-    my_public_subnet_routes:
-      - subnets:
-          - "{{ my_vpc_subnets[0].cidr }}"
-          - "{{ my_vpc_subnets[1].cidr }}"
-        routes:
-          - dest: "{{ everywhere_cidr }}"
-            gw: igw
-
-    # Inbound security groups, e.g. public facing services like a load balancer
-    my_inbound_security_groups:
-      - sg_name: inbound-web
-        sg_description: allow http and https access (public)
-        sg_rules:
-          - proto: tcp
-            from_port: 80
-            to_port: 80
-            cidr_ip: "{{ everywhere_cidr }}"
-
-          - proto: tcp
-            from_port: 443
-            to_port: 443
-            cidr_ip: "{{ everywhere_cidr }}"
-
-      # Only allow SSH access from within the VPC, to access any services within the VPC you would need to create a
-      # temporary bastion host
-      - sg_name: inbound-ssh
-        sg_description: allow ssh access
-        sg_rules:
-         - proto: tcp
-           from_port: 22
-           to_port: 22
-           cidr_ip: "{{ my_vpc_cidr }}"
-
-    # Internal inbound security groups, e.g. services which should not be directly accessed outside the VPC, such as
-    # the web servers behind the load balancer.
-    #
-    # This has to be a file as it needs to be dynamically included after the inbound security groups have been created
-    my_internal_inbound_security_groups_file: "internal-securitygroups.yml"
-
-    # Outbound rules, e.g. what services can the web servers access by themselves
-    my_outbound_security_groups:
-      - sg_name: outbound-all
-        sg_description: allows outbound traffic to any IP address
-        sg_rules:
-          - proto: all
-            cidr_ip: "{{ everywhere_cidr }}"
-
-    # Name of the SSH key registered in IAM
-    my_ec2_key_name: "{{ ssh_key_name }}"
-
-    # Name of the ECS cluster to create
-    my_ecs_cluster_name: "my-cluster"
-
+    # For ansible-role-ecs-cluster role:
+    ecs_cluster_name: "my-cluster",
+    vpc_name: "my_example_vpc",
+    key_name: "test-key"
+    ec2_security_groups: [
+      "sg-123",
+      "sg-345"
+    ],
+    ec2_asg_availability_zones: [
+      "{{ my_vpc_region }}a",
+      "{{ my_vpc_region }}b"
+    ],
+    ec2_asg_vpc_subnets: [
+      "subnet-id-1",
+      "subnet-id-2"
+    ],
   roles:
-
-    # Provision ECS with auto scaling EC2 instances
-    - {
-        role: aws-ecs-autoscale-role,
-        ecs_cluster_name: "{{ my_ecs_cluster_name }}",
-        ec2_security_groups: [
-          "{{ ec2_group_internal_inbound_sg.results[0].group_id }}",
-          "{{ ec2_group_outbound_sg.results[0].group_id }}"
-          ],
-        ec2_asg_availability_zones: [
-          "{{ my_vpc_subnets[0].az }}",
-          "{{ my_vpc_subnets[1].az }}"
-          ],
-        ec2_asg_vpc_subnets: [
-          "{{ vpc.subnets[0].id }}",
-          "{{ vpc.subnets[1].id }}"
-          ],
-        vpc_name: "{{ my_vpc_name }}",
-        key_name: "{{ my_ec2_key_name }}"
-      }
+    - ansible-role-ecs-cluster
