Simplifaction of cloudwatch log prefix setup

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,9 +4,6 @@ ecs_launch_configuration_name: "{{ ecs_cluster_name }}-lc"
 # Default component state
 ecs_state: present
 
-# Name of this environment, e.g. development, test, staging, production
-ecs_env: development
-
 # EC2 instance type to use
 ecs_instance_type: "t2.medium"
 
@@ -45,6 +42,12 @@ ecs_asg_replace_all_instances: yes
 ecs_asg_health_check_period: 60
 ecs_asg_health_type: EC2
 
+# Name of this environment, e.g. development, test, staging, production
+ecs_env: development
+
+# Cloudwatch namespacing
+cloudwatch_namespace: "ecs/{{ ecs_cluster_name }}-{{ ecs_env }}"
+
 # User-data needed to register the EC2 instance with ECS
 ecs_userdata: |
   Content-Type: multipart/mixed; boundary="==BOUNDARY=="
@@ -61,37 +64,38 @@ ecs_userdata: |
   # Install awslogs and the jq JSON parser
   yum install -y awslogs jq
 
-  # Inject the CloudWatch Logs configuration file contents
+  # Inject the CloudWatch Logs configuration file contents (configuration for awslogs package)
+  # Docs: https://docs.aws.amazon.com/de_de/AmazonCloudWatch/latest/logs/AgentReference.html
   cat > /etc/awslogs/awslogs.conf <<- EOF
   [general]
   state_file = /var/lib/awslogs/agent-state
 
   [/var/log/dmesg]
   file = /var/log/dmesg
-  log_group_name = {{ application_name }}-{{ ecs_env }}_/var/log/dmesg
+  log_group_name = {{ cloudwatch_namespace }}/var/log/dmesg
   log_stream_name = {cluster}/{container_instance_id}
 
   [/var/log/messages]
   file = /var/log/messages
-  log_group_name = {{ application_name }}-{{ ecs_env }}_/var/log/messages
+  log_group_name = {{ cloudwatch_namespace }}/var/log/messages
   log_stream_name = {cluster}/{container_instance_id}
   datetime_format = %b %d %H:%M:%S
 
   [/var/log/docker]
   file = /var/log/docker
-  log_group_name = {{ application_name }}-{{ ecs_env }}_/var/log/docker
+  log_group_name = {{ cloudwatch_namespace }}/var/log/docker
   log_stream_name = {cluster}/{container_instance_id}
   datetime_format = %Y-%m-%dT%H:%M:%S.%f
 
   [/var/log/ecs/ecs-init.log]
   file = /var/log/ecs/ecs-init.log.*
-  log_group_name = {{ application_name }}-{{ ecs_env }}_/var/log/ecs/ecs-init.log
+  log_group_name = {{ cloudwatch_namespace }}/var/log/ecs/ecs-init.log
   log_stream_name = {cluster}/{container_instance_id}
   datetime_format = %Y-%m-%dT%H:%M:%SZ
 
   [/var/log/ecs/ecs-agent.log]
   file = /var/log/ecs/ecs-agent.log.*
-  log_group_name = {{ application_name }}-{{ ecs_env }}_/var/log/ecs/ecs-agent.log
+  log_group_name = {{ cloudwatch_namespace }}/var/log/ecs/ecs-agent.log
   log_stream_name = {cluster}/{container_instance_id}
   datetime_format = %Y-%m-%dT%H:%M:%SZ
 
