--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,9 +2,12 @@ galaxy_info:
   author: Daniel Rhoades
   description: Ansible role for simplifying the provisioning and decommissioning of Auto-Scaling ECS clusters within an AWS account
   license: MIT
-  min_ansible_version: 2.1
+  min_ansible_version: 2.2
 
-  platforms: []
+  platforms:
+    - name: Amazon
+      versions:
+        - 2013.09
 
   galaxy_tags:
     - AWS
