--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -88,7 +88,7 @@ ecs_userdata: |
   datetime_format = %Y-%m-%dT%H:%M:%S.%f
 
   [/var/log/ecs/ecs-init.log]
-  file = /var/log/ecs/ecs-init.log.*
+  file = /var/log/ecs/ecs-init.log*
   log_group_name = {{ cloudwatch_namespace }}/var/log/ecs/ecs-init.log
   log_stream_name = {cluster}/{container_instance_id}
   datetime_format = %Y-%m-%dT%H:%M:%SZ
