Added wait time after IAM role creation, as it can take a bit for become available on AWS for other services

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -27,6 +27,11 @@
 
   - debug: var=iam_machine_role verbosity=3
 
+  - name: Wait for IAM role to become available
+    pause:
+      wait: 10
+    when: iam_machine_role.changed
+
   # Add CloudWatch policy to IAM role, as we create new LogGroups from the instance, see awslog config setup through user_data
   - name: "AWS | IAM | Attach IAM inline policy to IAM role to also create LogGroups on CloudWatch"
     iam_policy:
